# resolved

./: .gitignore  AGENTS.md  CONVENTIONS.md  LSTM.md  README.md  lstm_cv_results.txt  pyproject.toml
data/figures/: logistic_regression.txt  random_forest.txt  xgboost_results.txt
data/processed/: check.py  train.parquet
data/processed/rf_search_v2/: random_forest_best_result.json  random_forest_cv_results.csv
docs/: KNOWN_ISSUES.md  SESSION_LOG.md
docs/specs/: PROJECT_SPEC.md  ROADMAP.md
scripts/: 00_validate_categories.py  01_aggregate.py  01_aggregate_v2.py  02_validate_and_split.py  03_baseline.py  04_train_classical.py  05_train_neural.py  06_ablation_lr_v2.py  06_random_forest_search_v2.py  06_train_logistic_regression.py  06_train_random_forest.py  06_train_xg_boost.py  07_train_random_forest.py  07_traj_sweep_lstm.py  08_pos_weight_sweep_lstm.py  08_train_xg_boost.py  10_train_lstm.py
src/data/: aggregate.py  aggregate_v2.py  features.py  features_v2.py  split.py  validate.py
src/models/: baseline.py  classical.py  evaluate.py  lstm.py  neural.py
