[project]
name = "prediction-market-ml"
version = "0.1.0"
description = "ML pipeline to predict prediction market resolution (Kalshi/Polymarket)"
requires-python = ">=3.11"
dependencies = [
    # Data
    "duckdb>=1.2.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    # ML - Classical
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    # ML - Deep Learning
    "torch>=2.3.0",
    # NLP
    "sentence-transformers>=3.0.0",
    # Plotting
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # Utilities
    "tqdm>=4.67.0",
    "joblib>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
